@@ -391,6 +391,8 @@ BEGIN
     VK_UP,          ID_VIEW_LINEUP,         VIRTKEY, CONTROL, NOINVERT
     "D",            ID_VIEW_ONEWAYDIFF,     VIRTKEY, CONTROL, NOINVERT
     "T",            ID_VIEW_WHITESPACES,    VIRTKEY, CONTROL, NOINVERT
+    VK_LEFT,        ID_VIEW_LINELEFT,       VIRTKEY, CONTROL, NOINVERT
+    VK_RIGHT,       ID_VIEW_LINERIGHT,      VIRTKEY, CONTROL, NOINVERT
 END
 
 
