@@ -54,6 +54,7 @@ public:
 	 */
 	void			ScrollToLine(int nNewTopLine, BOOL bTrackScrollBar = TRUE);
 	void			ScrollAllToLine(int nNewTopLine, BOOL bTrackScrollBar = TRUE);
+	void			ScrollSide(int delta);
 	void			GoToLine(int nNewLine, BOOL bAll = TRUE);
 
 	void			SelectLines(int nLine1, int nLine2 = -1);
